--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.apache.camel</groupId>
-    <artifactId>examples</artifactId>
-    <version>2.15.2</version>
-  </parent>
-  <artifactId>camel-example-twitter-websocket-blueprint</artifactId>
-  <packaging>bundle</packaging>
-  <name>Camel :: Example :: Twitter WebSocket using OSGi Blueprint</name>
-  <description>An example that pushes new tweets to a web page using web-socket</description>
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-core</artifactId>
-      <version>2.15.1.redhat-620133</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <configuration>
-          <manifestLocation>target/META-INF</manifestLocation>
-          <instructions>
-            <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-            <Export-Package>org.apache.camel.example.twitter*</Export-Package>
-            <Import-Package>*</Import-Package>
-          </instructions>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>by.pauliukevich</groupId>
+	<artifactId>twitter-training</artifactId>
+	<packaging>bundle</packaging>
+
+	<name>Camel :: Example :: Twitter</name>
+
+	<properties>
+
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		
+		<camel.version>2.15.1.redhat-620133</camel.version>
+
+		<!-- versions of dependencies -->
+		<jboss.fuse.bom.version>6.2.0.redhat-133</jboss.fuse.bom.version>
+		<!-- the version of the BOM, defining all the dependency versions -->
+
+		<fabric8.bom.version>1.2.0.redhat-133</fabric8.bom.version>
+		<fabric.version>1.2.0.redhat-133</fabric.version>
+	
+		<felix.bundle.plugin.version>2.5.4</felix.bundle.plugin.version>
+	
+	</properties>
+
+	<dependencyManagement>
+	<dependencies>
+		
+		
+			<dependency>
+				<groupId>org.jboss.fuse.bom</groupId>
+				<artifactId>jboss-fuse-parent</artifactId>
+				<version>${jboss.fuse.bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>io.fabric8.bom</groupId>
+				<artifactId>fabric8-bom</artifactId>
+				<version>${fabric8.bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		
+		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-blueprint</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+
+	</dependencies>
+	</dependencyManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${felix.bundle.plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<manifestLocation>target/META-INF</manifestLocation>
+					<instructions>
+						<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
+						<Export-Package>org.apache.camel.example.twitter*</Export-Package>
+						<Import-Package>*</Import-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
+
+
+	<version>1.0</version>
 </project>
