--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 
 		<camel.version>2.15.1.redhat-620133</camel.version>
 		<slf4j.version>1.7.12</slf4j.version>
+		<pax-exam.version>4.6.0</pax-exam.version>
+		<twitter4j.version>4.0.4</twitter4j.version>
+		<karaf.version>4.0.1</karaf.version>
+		<log4j.version>2.3</log4j.version>
 
 
 		<jboss.fuse.bom.version>6.2.0.redhat-133</jboss.fuse.bom.version>
@@ -34,90 +38,118 @@
 
 	</properties>
 
-<dependencyManagement>
-	<dependencies>
+	<dependencyManagement>
+		<dependencies>
 
 
-		<dependency>
-			<groupId>org.jboss.fuse.bom</groupId>
-			<artifactId>jboss-fuse-parent</artifactId>
-			<version>${jboss.fuse.bom.version}</version>
-			<type>pom</type>
-		</dependency>
+			<dependency>
+				<groupId>org.jboss.fuse.bom</groupId>
+				<artifactId>jboss-fuse-parent</artifactId>
+				<version>${jboss.fuse.bom.version}</version>
+				<type>pom</type>
+			</dependency>
 
-		<dependency>
-			<groupId>io.fabric8.bom</groupId>
-			<artifactId>fabric8-bom</artifactId>
-			<version>${fabric8.bom.version}</version>
-			<type>pom</type>
-		</dependency>
+			<dependency>
+				<groupId>io.fabric8.bom</groupId>
+				<artifactId>fabric8-bom</artifactId>
+				<version>${fabric8.bom.version}</version>
+				<type>pom</type>
+			</dependency>
 
 
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-core</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-core</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
 
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-blueprint</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-blueprint</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
 
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-google-mail</artifactId>
-			<version>${camel.version}</version>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-google-mail</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
 
-		<dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>4.0.4</version>
-		</dependency>
+			<dependency>
+				<groupId>org.twitter4j</groupId>
+				<artifactId>twitter4j-core</artifactId>
+				<version>${twitter4j.version}</version>
+			</dependency>
 
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-test-blueprint</artifactId>
-			<version>${camel.version}</version>
-			<scope>test</scope>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-test-blueprint</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
 
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-twitter</artifactId>
-			<version>${camel.version}</version>
-			<scope>test</scope>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-twitter</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
 
 
 
 
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.3</version>
-			<scope>test</scope>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
 
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
-			<scope>test</scope>
-		</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-slf4j-impl</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4j.version}</version>
+			</dependency>
 
 
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.3</version>
-		</dependency>
+			<!-- Pax Exam -->
+			<dependency>
+				<groupId>org.ops4j.pax.exam</groupId>
+				<artifactId>pax-exam-container-karaf</artifactId>
+				<version>${pax-exam.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ops4j.pax.exam</groupId>
+				<artifactId>pax-exam-junit4</artifactId>
+				<version>${pax-exam.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ops4j.pax.exam</groupId>
+				<artifactId>pax-exam-inject</artifactId>
+				<version>${pax-exam.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.ops4j.pax.exam</groupId>
+				<artifactId>pax-exam-junit-extender-impl</artifactId>
+				<version>${pax-exam.version}</version>
+			</dependency>
 
-	</dependencies>
-</dependencyManagement>
+
+			<!-- Karaf -->
+			<dependency>
+				<groupId>org.apache.karaf</groupId>
+				<artifactId>apache-karaf</artifactId>
+				<version>${karaf.version}</version>
+				<type>tar.gz</type>
+			</dependency>
+
+
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
