--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
 
 	<modules>
 		<module>camel</module>
+		<module>feature</module>
+		<module>itest</module>
 	</modules>
 
 	<properties>
@@ -32,7 +34,6 @@
 		<!-- the version of the BOM, defining all the dependency versions -->
 
 		<fabric8.bom.version>1.2.0.redhat-133</fabric8.bom.version>
-		<fabric.version>1.2.0.redhat-133</fabric.version>
 
 		<felix.bundle.plugin.version>2.5.4</felix.bundle.plugin.version>
 
@@ -84,6 +85,12 @@
 			<dependency>
 				<groupId>org.apache.camel</groupId>
 				<artifactId>camel-test-blueprint</artifactId>
+				<version>${camel.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-test</artifactId>
 				<version>${camel.version}</version>
 			</dependency>
 
