--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,12 @@
 				<type>tar.gz</type>
 			</dependency>
 
-
+			<dependency>
+				<groupId>javax.inject</groupId>
+				<artifactId>javax.inject</artifactId>
+				<version>1</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 
@@ -167,8 +172,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
-
 
 </project>
