--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -23,25 +23,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<scope>test</scope>
-		</dependency>
 
 
 
@@ -62,13 +43,52 @@
 			<scope>test</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
+
 		<!-- Karaf -->
 		<dependency>
 			<groupId>org.apache.karaf</groupId>
 			<artifactId>apache-karaf</artifactId>
 			<type>tar.gz</type>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.karaf</groupId>
+					<artifactId>org.apache.karaf.client</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
+
+
+
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-commands-core</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.karaf</groupId>
+			<artifactId>camel-karaf-commands</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-catalog</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+
+
+
+
+
 	</dependencies>
 
 
