--- a/itest/pom.xml
+++ b/itest/pom.xml
@@ -66,23 +66,25 @@
 
 
 
-
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-commands-core</artifactId>
 			<version>${camel.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.camel.karaf</groupId>
 			<artifactId>camel-karaf-commands</artifactId>
 			<version>${camel.version}</version>
+			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-catalog</artifactId>
 			<version>${camel.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 
