--- a/message/pom.xml
+++ b/message/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>message</artifactId>
 	<packaging>jar</packaging>
 
-	<name>Message model</name>
+	<name>Message :: Model</name>
 
 	<parent>
 		<groupId>by.pauliukevich</groupId>
