--- a/camel-google/pom.xml
+++ b/camel-google/pom.xml
@@ -6,7 +6,7 @@
 
 	<artifactId>camel-google</artifactId>
 	<packaging>bundle</packaging>
-	
+
 	<name>Camel :: Google</name>
 
 	<parent>
@@ -47,6 +47,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-camel</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-blueprint</artifactId>
 			<scope>test</scope>
@@ -63,7 +68,6 @@
 			<artifactId>slf4j-api</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
