--- a/camel-twitter/pom.xml
+++ b/camel-twitter/pom.xml
@@ -26,6 +26,11 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-blueprint</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-camel</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.twitter4j</groupId>
