--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-camel</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-blueprint</artifactId>
 			<scope>test</scope>
@@ -49,6 +54,12 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>by.pauliukevich</groupId>
+			<artifactId>message</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 	</dependencies>
