--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 
 	<properties>
 
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 
@@ -42,7 +45,7 @@
 		<fabric8.bom.version>1.2.0.redhat-133</fabric8.bom.version>
 
 		<felix.bundle.plugin.version>2.5.4</felix.bundle.plugin.version>
-
+		
 	</properties>
 
 	<dependencyManagement>
@@ -123,6 +126,7 @@
 				<artifactId>apache-karaf</artifactId>
 				<version>${karaf.version}</version>
 				<type>tar.gz</type>
+				<scope>provided</scope>
 			</dependency>
 
 			<dependency>
