--- a/camel-google/pom.xml
+++ b/camel-google/pom.xml
@@ -39,6 +39,11 @@
 
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-blueprint</artifactId>
 			<scope>test</scope>
 		</dependency>
