--- a/collector/pom.xml
+++ b/collector/pom.xml
@@ -34,6 +34,11 @@
 
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jackson</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-blueprint</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -61,6 +66,7 @@
 			<artifactId>message</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
 
 	</dependencies>
 
