--- a/camel-google/pom.xml
+++ b/camel-google/pom.xml
@@ -15,6 +15,10 @@
 		<version>1.0</version>
 	</parent>
 
+	<properties>
+		<fabric8.profile>fabric-test-1</fabric8.profile>
+	</properties>
+
 	<dependencies>
 
 		<dependency>
@@ -78,6 +82,13 @@
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
 				<extensions>true</extensions>
+			</plugin>
+
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>fabric8-maven-plugin</artifactId>
+				<configuration>
+				</configuration>
 			</plugin>
 
 		</plugins>
